# abiftool

./: CHANGELOG.org  LICENSE  MANIFEST.in  README.md  abif-electorama.fetchspec.json  abif-electorama.repospec.json  abiftool.py  conftest.py  debian-elections.preflib.fetchspec.json  fetchmgr.py  generate_nyc_fetchspec.py  pyproject.toml  pytest.ini  repomgr.py  requirements.txt  tennessee-example.fetchspec.json  tennessee-example.repospec.json  test_abiftool.py  test_abiftool_json.py  test_abiftool_linecount.py  test_abiftool_roundtrip.py  test_abiftool_texttable.py  vt-burl-2009.preflib.fetchspec.json~
abiflib/: __init__.py  abifregex.py  approval_tally.py  converter.py  core.py  debtally.py  debvote_fmt.py  devtools.py  fptp_tally.py  html_output.py  html_output_common.py  html_output_pairwise.py  html_output_scorestar.py  irv_tally.py  irvtally.py  nameq.py  nameq_fmt.py  nycdem_fmt.py  pairwise.py  pairwise_tally.py  preflib.py  preflib_fmt.py  score_star_tally.py  scorestar.py  sfjson_fmt.py  sftxt.py  sftxt_fmt.py  stlcvr_fmt.py  text_output.py  textoutput.py  transform_core.py  util.py  vizelect.py  vizelect_output.py  widj_fmt.py  widjfuncs.py
docs/: TODO.org  abiflib.md  approval-voting.md  ballot-conversion.md  index.md  metadata.md  nyc-cvr.md  release-checklist.org  stl-cvr.md  tests.md
env_setup/: bash_autocomplete_for_abiftool.sh
fetchspecs/: abif-electorama.fetchspec.json  bolson-nameq.fetchspec.json  debian-elections.fetchspec.json  nyc-elections-2025.fetchspec.json  preflib.fetchspec.json  sf-elections-sfjson-fptp-part1.fetchspec.json  sf-elections-sfjson-fptp-part2.fetchspec.json  sf-elections-sfjson-rcv-2024.fetchspec.json  sf-elections-sfjson.fetchspec.json  sf-elections.fetchspec  tenn-example-github-gist.fetchspec.json  tmp-d08-single.fetchspec.json  vt-burl-2009.preflib.fetchspec.json
pytests/: abifprefstr_test.py  abiftestfuncs.py  approval_test.py  ballot_test.py  cli_test.py  codefmt_test.py  conftest.py  core_test.py  cvr_test.py  debtally_test.py  debvote_test.py  fptp_test.py  html_test.py  invalid_input_test.py  irv_test.py  json_test.py  linecount_test.py  nameq_test.py  pairwise_test.py  preflib_test.py  questionable_input_test.py  ranking_test.py  roundtrip_test.py  score_test.py  scorestar_test.py  sftxt_test.py  starcount_test.py  texttable_test.py  vizelect_test.py  zz_final_notes_test.py
testdata/: localabif  tenn-example
testdata/bolson-nameq/: letters.nameq  nullcand.nameq  numbercand.nameq  tennessee-example-simple.nameq
testdata/burl2009/: burl2009  burl2009-withratings.abif  burl2009.abif  burl2009.jabmod  burl2009.widj
testdata/california/: sf2018special-results.abif  simple001-example.jabmod.json
testdata/commasep/: commasquare.abif  daneckam-cereal-example.ranked.csv  jman722-example.abif  tn-example-missing-scores.abif  tn-example-scores-and-commas.abif
testdata/invalid/: tenn-invalid.abif
testdata/mock-elections/: mock-all-blank.abif  mock-one-cand-with-blanks.abif  mock-one-cand.abif  mock-scorestar-tie.abif  mock-tie.abif  mock-twotie.abif  mock-wv-margins.abif  tennessee-example-approval.abif  tennessee-example-blank-prefstr.abif  tennessee-example-nested-quote.abif  tennessee-example-overvote-01.abif  tennessee-example-overvote-02.abif  tennessee-example-overvote-03.abif  tennessee-example-simple.abif  tennessee-vice-capital.abif
testdata/questionable/: leadingspace-tenn.abif  novotelines-tenn.abif  one-A-LF.abif  one-A.abif  (+1 more)
tests/: abiftestfuncs.py  test_abiftool_debtally.py  test_abiftool_linecount.py  test_abiftool_preflib.py  test_abiftool_roundtrip.py  test_abiftool_texttable.py
util/: configtool.py  copedot.py  fetchspec_conv.py
(+7 files in other folders)
