[project]
name = "abiftool"
version = "0.32.0"
description = "abiftool parses, converts and analyzes ABIF (Aggregated Ballot Information Format) files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    { name = "Rob Lanphier", email = "robla@robla.net" }
]
dependencies = [
    "BeautifulSoup4",
    "graphviz",
    "requests",
    "Texttable"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Sociology :: History"
]

[project.scripts]
abiftool = "abiftool:main"
fetchmgr = "fetchmgr:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["abiftool", "fetchmgr"]
packages = ["abiflib"]
include-package-data = true

[tool.setuptools.data-files]
"fetchspecs" = ["fetchspecs/*.fetchspec.json"]
