[project]
name = "abiftool"
version = "0.33.0"
description = "abiftool parses, converts and analyzes ABIF (Aggregated Ballot Information Format) files."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    { name = "Rob Lanphier", email = "robla@robla.net" }
]
dependencies = [
    "BeautifulSoup4",
    "graphviz",
    "openpyxl",
    "pandas",
    "requests",
    "Texttable"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Sociology :: History"
]

[project.scripts]
abiftool = "abiftool:main"
fetchmgr = "fetchmgr:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["abiftool", "fetchmgr"]
packages = ["abiflib"]
include-package-data = true

[tool.setuptools.data-files]
"fetchspecs" = ["fetchspecs/*.fetchspec.json"]

# Preserve testdata directory structure by targeting each subfolder explicitly
"testdata/bolson-nameq" = [
    "testdata/bolson-nameq/*"
]
"testdata/burl2009" = [
    "testdata/burl2009/*"
]
"testdata/california" = [
    "testdata/california/*"
]
"testdata/commasep" = [
    "testdata/commasep/*"
]
"testdata/mock-elections" = [
    "testdata/mock-elections/*"
]
"testdata/questionable" = [
    "testdata/questionable/*"
]
"testdata/tenn-example" = [
    "testdata/tenn-example/*"
]
"testdata/widjexample" = [
    "testdata/widjexample/*"
]

# Ignoring "E501" for now, since it seems to cause autopep8 to break
# up f-strings in an unpredictable way.
[tool.autopep8]
ignore = "E501"
